lox-tests/tests/super/no_superclass_method.stderr
ERROR: Undefined property `doesNotExist` on superclass
 --> 5:5
  |
5 |     super.doesNotExist(1); // expect runtime error: Undefined property 'doesNotExist'.
  |     ^----------------^
